# MathSimulations

epicycle_drawing/: .gitignore  meson.build
epicycle_drawing/include/: epicycle_visualizer.hpp
epicycle_drawing/src/: epicycle_vizualizer.cpp  main.cpp
epicycle_drawing/subprojects/: gtest.wrap  range-v3.wrap
heat_diffusion/: .clang-format  .gitignore  meson.build
heat_diffusion/include/: graphics_interface.hpp  heat_diffusion.hpp
heat_diffusion/shaders/: test_shader.frag  test_shader.vert
heat_diffusion/src/: graphics_interface.cpp  main.cpp
heat_diffusion/subprojects/: .gitignore  cuda_calc.wrap  glfw.wrap  glfwpp.wrap  vulkan_headers.wrap  vulkan_hpp.wrap
